--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.4.1
 beautifulsoup4==4.9.3
+dj-database-url==0.5.0
 Django==3.1.3
 django-bootstrap3==15.0.0
+django-heroku==0.3.1
 Pillow==8.3.2
 psycopg2==2.9.1
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
+whitenoise==5.3.0
